--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <H1>CURRICULUM VITAE</H1>
     Objective : <p align = center> </p>    
-    <table border = 1>
+    <table border = 1px>
         <tr>
             <th>S.No.</th>
             <th>Course</th>
