--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
 <body>
     <H1>CURRICULUM VITAE</H1>
-    Objective : <p align = center> </p>    
+    Objective : <p align = center> </p>   
+    <img src = "SHO2.jpg">
     <table border = 1px>
         <tr>
             <th>S.No.</th>
