--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
     <H1>CURRICULUM VITAE</H1>
     Objective : <p align = center> </p>   
+    <a href = "https://github.com/shobhit24/My-Resume/blob/master/SHO2.jpg">
     <img src = "SHO2.jpg">
     <table border = 1px>
         <tr>
