--- a/index.html
+++ b/index.html
@@ -2,10 +2,20 @@
 <head>
     <title>My Resume</title>
 </head>
-
+<style>
+    .outer-div{
+        width: 960px;
+        color: navy;
+        background-color: pink;
+        border: 2px solid darkblue;
+        padding: 5px;
+ </style>
 <body>
     <H1>CURRICULUM VITAE</H1>
-    Objective : <p align = center> </p>   
+    
+    <div class = "outer-div">
+        Objective : <p align = center> </p>  
+    </div>
     <a href = "https://github.com/shobhit24/My-Resume/blob/master/SHO2.jpg">Image : </a>
     <img src = "SHO2.jpg">
     <table border = 1px>
