--- a/index.html
+++ b/index.html
@@ -4,20 +4,30 @@
 </head>
 <style>
     .outer-div{
+        align = right;
         width: 960px;
         color: navy;
         background-color: pink;
         border: 2px solid darkblue;
         padding: 5px;
+    }
+    
+    .name-cv{
+        align = left;
+        width: 400px
+        color: navy;
+        background-color: pink;
+        border: 2px solid darkblue;
+        padding: 5px;
+    }
  </style>
 <body>
     <H1>CURRICULUM VITAE</H1>
-    
+    Objective : <p align = center> </p>  
+    <h2 class="name-cv">Shobhit Goswami</h2>
     <div class = "outer-div">
-        Objective : <p align = center> </p>  
-    </div>
-    <a href = "https://github.com/shobhit24/My-Resume/blob/master/SHO2.jpg">Image : </a>
-    <img src = "SHO2.jpg">
+    <a href = "https://github.com/shobhit24/My-Resume/blob/master/SHO2.jpg"></a>
+     </div>
     <table border = 1px>
         <tr>
             <th>S.No.</th>
