--- a/div-tag.html
+++ b/div-tag.html
@@ -14,7 +14,10 @@
 </style>
 <body>
  <div class="outer-div">
-  <h1>Welcome to my pass</h1>
+    This is OUTERr-div
+   <div class="inner-div">
+     contains this INNER-div
+   </div>
  </div>
 </body>
 </body>
